[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/player/player_rigid.gd" type="Script" id=1]
[ext_resource path="res://gltf/ship.glb" type="PackedScene" id=2]
[ext_resource path="res://audio/ship_engine.sample" type="AudioStream" id=3]
[ext_resource path="res://audio/Alliance-AssaultRifle_05-Single_Shot-04.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/rocket_shwoosh.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/shield_impact.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/hull_impact.wav" type="AudioStream" id=7]
[ext_resource path="res://textures/smoke.png" type="Texture" id=8]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.5

[sub_resource type="CylinderShape" id=2]
radius = 1.33

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 8 )

[sub_resource type="QuadMesh" id=4]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="CylinderShape" id=6]
radius = 1.4553

[node name="PlayerShip" type="RigidBody" groups=[
"minimap_visible",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 5
mode = 2
physics_material_override = SubResource( 1 )
custom_integrator = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )
rockets = 7

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Visuals" type="Spatial" parent="."]

[node name="Ship" parent="Visuals" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.396621, 0 )

[node name="SpotLight" type="SpotLight" parent="Visuals"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.320078, -0.29376, 0.713198 )
light_energy = 2.0
spot_range = 15.0
spot_attenuation = 0.5
spot_angle = 35.0
spot_angle_attenuation = 0.5

[node name="SpotLight2" type="SpotLight" parent="Visuals"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.32, -0.294, 0.713 )
light_energy = 2.0
spot_range = 15.0
spot_attenuation = 0.5
spot_angle = 35.0
spot_angle_attenuation = 0.5

[node name="Backlight" type="OmniLight" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.219136, -0.315244, -0.509223 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.75
omni_range = 2.43134
omni_attenuation = 3.0

[node name="Backlight2" type="OmniLight" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.219, -0.315, -0.509 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.75
omni_range = 2.43134
omni_attenuation = 3.0

[node name="Particles" type="Spatial" parent="."]

[node name="Explode" type="CPUParticles" parent="Particles"]
material_override = SubResource( 3 )
emitting = false
amount = 64
one_shot = true
explosiveness = 1.0
mesh = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 0.35
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
damping = 5.0
color_ramp = SubResource( 5 )

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 15.0
unit_size = 5.0
autoplay = true
bus = "Effects"

[node name="RocketAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
mix_target = 2
bus = "Effects"

[node name="HullDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0
bus = "Effects"

[node name="ShieldDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0
bus = "Effects"

[node name="LaserAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.854
bus = "Effects"

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.1, 0 )

[node name="Hitbox" type="Area" parent="."]
collision_layer = 2
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 6 )

[connection signal="body_entered" from="Hitbox" to="." method="_hitbox_body"]
